--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,19 @@
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
+	<manifest>
+    	<addDefaultImplementationEntries>false</addDefaultImplementationEntries>
+   	</manifest>
+        <archive>
+    <manifestEntries>
+     <Major-Version>${project.version}</Major-Version>
+     <Build-Version>${build.number}</Build-Version>
+     <Build-Time>${maven.build.timestamp}</Build-Time>
+     <Build-Host>${agent.name}</Build-Host>
+     <Build-User>${user.name}</Build-User>
+    </manifestEntries>
+   </archive>
+
           <source>1.6</source>
           <target>1.6</target>
         </configuration>
@@ -179,6 +192,7 @@
         </plugin>
       </plugins>
     </pluginManagement>
+	<finalName>${[yourWarName].war.finalName}</finalName>
   </build>
 
   <dependencyManagement>
